[package]
name = "stock-tracking"
version = "0.1.0"
edition = "2018"
authors = ["Jessai Maya <maya.jessai@gmail.com>"]
description = "First exercise from Building a Stock-Tracking CLI With Async Streams in Rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
yahoo_finance_api = { version = "1.2.2", features = ["blocking"] }
